src/wp-content/themes/phuckhang/style.css
/* ... */
ul.sub-nav {
    margin: 0;
    background: #666666;
    width: 200px;
    padding: 20px 0px;
}

ul.sub-nav li {
    text-align: right;
    padding: 3px 24px;
    margin: 0px;
    list-style: none;
}

ul.sub-nav li a {
    color: #c9c9c9;
    font-size: 18px;
    line-height: 24px;
    font-weight: bold;
    text-transform: uppercase;
    text-decoration: none;
}

ul.sub-nav li a:hover, ul.sub-nav li.active a {
    color: #FFF;
}

.hotline {
    text-transform: uppercase;
    font-size: 18px;
    line-height: 20px;
    font-weight: 300;
    color: #FFF;
    background: #209345;
    width: 200px;
    text-align: right;
    padding: 10px 24px;
    margin-top: 10px;
}

.hotline a {
    text-decoration: none;
    color: #FFF;
}

/* ONSALE table */

.onsale-table {
    font-size: 14px;
}

.onsale-table th {
}

.onsale-table td {
}

.onsale-table input[type="text"] {
    width: 137px;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    font-weight: 300;
}

.onsale-table select {
    font-weight: 300;
    width: 137px;
    /*    -webkit-border-radius: 0px;
          -moz-border-radius: 0px;
          border-radius: 0px;*/
}

.onsale-table img.icon {
    display: inline;
    margin: 0px 5px 0px 0px;
    height: 20px;
}

.other-project-wrap {
    float: left;
    width: 325px;
}

.other-project-header {
    display: block;
    height: 70px;
    float: left;
    border-left: #818181 2px solid;
    padding-left: 18px;
    margin-bottom: 24px;
}

.other-project-link {
    display: block;
    margin: 20px 0px;
    float: left;
}

/*
 *  CATEGORY Styles & News post
 */

.news-nav {
    background: #5d5d5d;
    padding: 10px 20px;
    text-align: right;
    color: #FFF;
    width: 250px;
    float: right;
}

.news-nav span {
    display: block;
    padding: 10px 5px 5px 5px;
}

.news-nav_feed {

}

.news-nav_feed span{

}

.news-nav_feed ul.category-menu li a{
    color: #a6a6a6;
    font-weight: bold;
}

.news-nav_feed ul.category-menu li.active a,
.news-nav_feed ul.category-menu li:hover a{
    color: white;
    text-decoration: none;
}

ul.category-menu {
}

ul.category-menu li {
    display: block;
    margin: 0px;
    padding: 5px;
    list-style: none;
}

ul.category-menu li a {
    color: #FFF;
    font-size: 18px;
}

.category-post {
}

.category-post img {
    max-width: 100%;
    height: auto;
}

span.post-date {
    color: #5c5c5c;
    display: block;
    padding-top: 20px;
    padding-bottom: 10px;
}

h4.entry-title {
    font-size: 18px;
    line-height: 24px;
    text-transform: uppercase;
    font-weight: 600;
}

h1.entry-title {
    font-size: 24px;
    line-height: 24px;
    text-transform: uppercase;
    font-weight: 600;
    color: #000;
}

h4.entry-title a, h1.entry-title a {
    color: #000;
}

.content-area {
    padding: 10px;
}

.content-area img {
    max-width: 100%;
    height: auto;
    padding-top: 10px;
    padding-bottom: 10px;
}

.content-area p {
    max-width: 650px;
}

/**
 * SOCIAL HOME
 */

.avatar {
    /*display: block;
    width: 152px;
    height: 152px;*/
    margin-bottom: 20px;
    text-align: left;
    border: 2px solid #ddd;
}

.small-avatar, .medium-avatar {
    border: 1px solid #ddd;
}

.avatar img {
    border: 1px solid #ddd;
}

.social-cotent {
    margin-top: 40px;
    margin-left: 0px;
    margin-right: 0px;
    padding-left: 0px;
    padding-right: 0px;
}

.group-wrap {
}

.group-links {
    margin: 0;
    padding: 0;
}

.group-item {
    list-style: none;
    margin: 10px 0px 5px 0px;
    padding: 0 0 0 0;
}

.info-friend {
    padding-left: 5px;
    padding-top: 5px;
}

.person {
    text-align: center;
}

.feed {
    display: block;
    border: 1px solid #ddd;
    padding: 15px 15px;
    margin: 10px 0px;
}

.refresh {
    text-align: center;
    margin: 20px;
}

.social-sidebar {
    padding: 20px 20px;
    border: 1px solid #ddd;
    width: 300px;
}

#tabs {
    border-bottom: none;
}

#tabs li {
}

#tabs li a {
    padding: 10px 27.6px;
}

#tabs.nav-tabs > li {
    margin-bottom: -2px;
}

textarea.message {
    width: 250px;
    border: 1px solid #ddd;
}

.social-tools-wrap {
    border-top: 1px solid #ddd;
    padding: 10px 0px;
}

.social-tools {
    display: block;
    padding: 10px 0px;
}

.pt20{
    padding-top: 20px;
}

/**
 * Message
 */
.not-read {
    font-weight: bold;
}

/**
 * Notification
 */

.user-info {
    padding-bottom: 20px;
    padding-top: 100px;
}

.user-info-header{
    padding-top: 30px;
}

.user-span-control {
    font-size: 20px;
}

.date-wrap {
    border-bottom: 1px solid #ddd;
    margin-bottom: 25px;
    margin-top: 10px;
}

.noti-item {
    margin: 10px 0px;
}

.noti-datetime {
    display: block;
}

.noti-avatar {
    text-align: right;
}

.photo-header {
    display: block;
    border-bottom: 1px solid #ddd;
    padding-bottom: 5px;
}

.photo-item {
    display: block;
    margin: 10px 0px;
}

.photo-item img {
    border: 1px solid #ddd;
}

.horizontal-footer {
    margin: 20px 0px;
    border-bottom: 1px solid #ddd;
}

/**
 * FRIENDS PAGE
 *  */

.friend-item {
    padding: 5px;
}

.friend-name {
    padding-top: 10px;
    font-weight: bold;
    display: block;
}

.friend-role {

}

/**
 * Footer
 */

#footer {
    color: #878787;
    font-weight: 300;
    text-align: center;
    display: block;
    padding-top: 15px;
    padding-bottom: 15px;
    height: 35px;
}
/* ... */

